--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "taky-redis-members",
   "description": "fast, simple redis-based membership interface w/ memory cache",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "main": "./module.js",
+  "url": "https://github.com/douglauer/taky-redis-members",
   "dependencies": {
     "memory-cache": "~0.1.4",
     "english-time": "0.0.9",
